# NRAG

./: .gitignore  README.md  pyproject.toml
benchmarks/: csc_eval.py
idx_csc/: kapi.json  meta.json
kapi/: app.py  cli.py  config.py  portable.py  service.py  tco.py
kapi/augment/: __init__.py  compiler.py
kapi/eval/: __init__.py  bright.py
kapi/integrations/: __init__.py  langchain.py  llamaindex.py
kapi/retrieve/: router.py  sparse.py
nrag/: __init__.py
research/: STRATEGY.md
tests/: test_bright.py  test_compiler.py  test_csc.py  test_integrations.py  test_portable.py  test_router.py  test_service.py  test_tco.py
