[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrag"
version = "0.1.1"
description = "Fast, local, zero-setup RAG with no embedding model — BM25 + the LLM you plug in."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NineNatthanarong" }]
keywords = [
    "rag", "bm25", "retrieval", "search", "tantivy", "llm", "local",
    "embedding-free", "sparse-retrieval", "information-retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Core stays featherweight: a fast persistent engine, a pure-Python stemmer, and an
# HTTP client so the local-LLM path works on the core install alone. No models, ever.
dependencies = [
    "tantivy>=0.24",
    "snowballstemmer>=2.2",
    "httpx>=0.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0", "tiktoken>=0.5"]                 # SDK retries + exact token counts
bm25s = ["bm25s>=0.2", "numpy>=1.23", "scipy>=1.10"]      # optional in-memory fast-batch engine
pdf = ["pypdf>=4.0"]
html = ["selectolax>=0.3"]
tiktoken = ["tiktoken>=0.5"]
eval = [
    "ranx>=0.3",
    "pytrec_eval-terrier>=0.5",
    "beir>=2.0",
    "ragas>=0.2",
    "datasets>=2.0",
]
dev = [
    "nrag[openai,bm25s,eval]",
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
nrag = "nrag.cli:main"

[project.urls]
Homepage = "https://github.com/NineNatthanarong/NRAG"
Repository = "https://github.com/NineNatthanarong/NRAG"
Issues = "https://github.com/NineNatthanarong/NRAG/issues"

[tool.hatch.build.targets.wheel]
packages = ["nrag"]

# Keep the source distribution lean: ship the package, license, and readme only.
[tool.hatch.build.targets.sdist]
include = ["/nrag", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
markers = [
    "eval: end-to-end evaluation tests (may require network / extra deps)",
    "live_llm: tests that require a running local LLM server",
]

[tool.ruff]
line-length = 100
target-version = "py310"
